--- a/floreantpos/FloreantAndroid/AndroidManifest.xml
+++ b/floreantpos/FloreantAndroid/AndroidManifest.xml
@@ -13,9 +13,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TableLogin"
+        		  android:label="@string/app_name">
+        		  
+        </activity>
         <activity android:name=".TableScreen"
         		  android:label="@string/app_name">
         		  
+        </activity>
+        <activity android:name=".OrderScreen"
+        		  android:label="@string/app_name">
+        
         </activity>
 
     </application>
