--- a/floreantpos/FloreantAndroid/AndroidManifest.xml
+++ b/floreantpos/FloreantAndroid/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="8" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".POS"
                   android:label="@string/app_name">
@@ -25,6 +25,12 @@
         		  android:label="@string/app_name">
         
         </activity>
+        <activity android:name=".TestDatabase"
+        		  android:label="@string/app_name">
+        
+        </activity>
+        
 
     </application>
+    
 </manifest>
