Implemented Database connection into actual application. Currently pulls one menu item.

--- a/floreantpos/FloreantAndroid/AndroidManifest.xml
+++ b/floreantpos/FloreantAndroid/AndroidManifest.xml
@@ -29,6 +29,10 @@
         		  android:label="@string/app_name">
         
         </activity>
+        <activity android:name=".Beverages"
+        		  android:label="@string/app_name">
+        
+        </activity>
         
 
     </application>
