--- a/floreantpos/FloreantAndroid/AndroidManifest.xml
+++ b/floreantpos/FloreantAndroid/AndroidManifest.xml
@@ -33,6 +33,9 @@
         		  android:label="@string/app_name">
         
         </activity>
+        <activity android:label="@string/app_name" android:name=".BreakFast"></activity>
+        <activity android:label="@string/app_name" android:name=".Lunch"></activity>
+        <activity android:label="@string/app_name" android:name=".Dinner"></activity>
         
 
     </application>
